test_programs/compile_failure/noirc_frontend_tests_disallows_test_attribute_on_trait_impl_method/src/main.nr

        pub trait Trait {
            fn foo() { }
        }

        pub struct Foo { }

        impl Trait for Foo {
            #[test]
            fn foo() { }
        }

        fn main() { }
    